# Hatch-Generator

./: CMakeLists.txt  Doxyfile  README.md
include/: cmdline_parser.h  geometry.h  svg_writer.h
src/: cmdline_parser.cpp  geometry.cpp  main.cpp  svg_writer.cpp
